--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ div.contentPages {background-color:rgba(0,0,0,0.5)}
 
  div.contentCinemaFilms a{color: #A9A9A9}
  div.contentCinemaFilms {background-color:rgba(0,0,0,0.5)}
- div.contentCinemaFilms table{width: 100%}
+ div.contentCinemaFilms table{width: 100%;width: 100%}
+ div.contentCinemaFilms img{max-width: 50% ; height: auto}
 
 
 div.footer{position: fixed; /* Фиксированное положение */
