--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ div.contentcinema table{width: 100%}
 div.contentMain a{color:#FFFFFF}
 div.contentMain table{width: 100%}
 div.contentMain td{width: 25%}
+div.contentMain select{width: 100%;background-color:rgba(0,0,0,0.5);color: white}
+div.contentMain input{width: 100%;background-color:rgba(0,0,0,0.5);color: white}
 
 
 
