--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -1,5 +1,7 @@
 
-@media (max-width: 600px) {
+@media screen and (max-width: 1100px) {
+  /* specific CSS */
+
 
   body{background:#FFF; margin: 0;padding: 0;
   font: 16px/24px Arial, sans-serif;}
@@ -16,7 +18,7 @@
       0 0 40px rgba(0,0,0,0.24);
     ;}
   div.header{background: #2D2D2D}
-  div.header img{width: 20%}
+  div.header img{width: 30%}
 
   /*шапка*/
 
@@ -58,14 +60,9 @@
 
 
 
-  div.register {width: 100% ;margin: 0 auto;height: 60%;box-shadow:
-      inset 0 2px 5px #FFF,
-      inset 1px 0 5px #FFF,
-      inset -1px 0 5px #FFF,
-      inset 0 -2px 5px #FFF,
-      0 0 40px rgba(0,0,0,0.24);
+  div.register {width: 100% ;margin: 0 auto;height: 100%
     ;}
-    div.register table{width: 90%; 	border-spacing: 15px;
+    div.register table{width: 100%; 	border-spacing: 15px;
   }
     div.register caption{font: 12px/16px Arial;margin-bottom: 10px;}
 
@@ -133,7 +130,7 @@
 
 }
 
-@media (min-width: 601px) {
+@media (min-width: 1101px) {
 
   body{background:#FFF; margin: 0;padding: 0;
   font: 16px/24px Arial, sans-serif;}
