--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -10,24 +10,17 @@
 
   /*структура*/
   div.mid{width: 100%; margin: 0 auto;}
-  div.midS{width: 100%;margin: 0 auto;background-color: white;box-shadow:
-      inset 0 2px 5px #FFF,
-      inset 1px 0 5px #FFF,
-      inset -1px 0 5px #FFF,
-      inset 0 -2px 5px #FFF,
-      0 0 40px rgba(0,0,0,0.24);
-    ;}
-  div.header{background: #2D2D2D}
+  div.midS{width: 100%;margin: 0 auto;}
+  div.header{background: #2D2D2D;}
   div.header img{width: 30%}
 
   /*шапка*/
 
 
-  div.topmenu {float: right;line-height: 30px;color: black}
+  div.topmenu {float: right;color: black;width: 30%}
   div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
-    border-radius: 30px;background-color: black;width: 130px;height: 30px;text-align: center; position: relative;
-  margin: 13px;
-
+    border-radius: 30px;background-color: black;width: 60%;text-align: center; position: relative;
+margin: 10%
   }
   div.topmenu a:hover {
   background:#cc4e5c;
