--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 479px) {
   /* specific CSS */
 
 
@@ -123,7 +123,7 @@ margin: 10%
 
 }
 
-@media (min-width: 1101px) {
+@media screen and (min-width: 480px) {
 
   body{background:#FFF; margin: 0;padding: 0;
   font: 16px/24px Arial, sans-serif;}
