--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -25,7 +25,6 @@ margin: 10%
   div.topmenu a:hover {
   background:#cc4e5c;
   }
-  div.DoneForm {line-height: 30px}
 
 
 
@@ -39,7 +38,7 @@ margin: 10%
 
   div.main table{width: 100%}
 
-
+  div.profile{width: 100%}
   div.profile table{width: 100%;text-align:center;border: 1px solid black;}
   div.profile button{color:black;background-color: white;border-color: black;width: 50%}
   div.profile th{color:black;background-color: white;border-color:white;width: 100%}
@@ -47,9 +46,8 @@ margin: 10%
 
 
 
-  div.register {width: 100% ;margin: 0 auto;height: 100%
-    ;}
-    div.register table{width: 100%; 	border-spacing: 15px;
+  div.register {width: 100% ;}
+    div.register table{width: 100%; 	border-spacing: 15px
   }
     div.register caption{font: 20px/25px Arial;margin-bottom: 10px;}
 
@@ -96,8 +94,8 @@ margin: 10%
 
 
     .myforms {
-  	 width: 150px;
-  	 margin: 150px auto;
+  	 width: 100%;
+  	 margin:100%;
   }
 
   .myforms input {
