--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -1,5 +1,5 @@
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 801px) {
 
 body{background:#FFF; margin: 0;padding: 0;
 font: 16px/24px Arial, sans-serif;}
@@ -56,7 +56,7 @@ div.profile td{text-align: center;}
 
 
 
-div.register {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
+div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
     inset 0 2px 5px #FFF,
     inset 1px 0 5px #FFF,
     inset -1px 0 5px #FFF,
@@ -128,19 +128,12 @@ div.register {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-s
 }
 
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
 
 div.register input{border-color: #e6e6e6}
-  div.register tr {
-    display: block;
 
-  }
-  div.register td {
-    margin-bottom: 10%;
-    display: block;
-  }
   div.register {width: 100% }
-
+div.register table{width: 100%;border-spacing: 15px}
 div.check {width: 100%;height: 100%};
 div.check table{width: 100%}
 
