--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -56,7 +56,7 @@ div.profile td{text-align: center;}
 
 
 
-div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
+div.register {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
     inset 0 2px 5px #FFF,
     inset 1px 0 5px #FFF,
     inset -1px 0 5px #FFF,
@@ -128,12 +128,19 @@ div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-sha
 }
 
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
 
 div.register input{border-color: #e6e6e6}
+  div.register tr {
+    display: block;
 
+  }
+  div.register td {
+    margin-bottom: 10%;
+    display: block;
+  }
   div.register {width: 100% }
-div.register table{width: 100%;border-spacing: 15px}
+
 div.check {width: 100%;height: 100%};
 div.check table{width: 100%}
 
@@ -147,6 +154,128 @@ div.check table{width: 100%}
   div.midS{width: 100%;margin: 0 auto;background-color: white;}
   div.header{background: #2D2D2D;width: 100%}
   div.header img{width: 35%}  /*шапка*/
+
+
+  div.topmenu {float: right;color: black;width: 30%}
+  div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
+    border-radius: 30px;background-color: #FFF;width: 60%;text-align: center; position: relative;
+margin: 10%
+  }
+  div.topmenu a:hover {
+  background:#cc4e5c;
+  }
+  div.topmenu a:hover {
+  background:#cc4e5c;
+  }
+  div.DoneForm {line-height: 30px}
+
+
+  div.DoneForm a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.DoneForm a:hover {
+  background:#D0D0D0;
+  }
+
+
+
+  div.searcher {height: 100px}
+  div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
+  div.searcher input {width: 100%;margin: 0;padding:0;border:8;border-color: black ; height: 40px}
+  div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
+
+
+  div.main table{width: 100%}
+
+
+  div.profile table{width: 100%;text-align:center;border: 1px solid black;}
+  div.profile button{color:black;background-color: white;border-color: black;width: 50%}
+  div.profile th{color:black;background-color: white;border-color:white;width: 100%}
+  div.profile td{text-align: center;}
+
+
+
+
+      .radio input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+      }
+      .radio__text {
+        position: relative;
+        cursor: pointer;
+      }
+      .radio__text:before {
+        content: '';
+        position: absolute;
+        top: -3px;
+        left: 0;
+        width: 18px;
+        height: 18px;
+        border: 1px solid #CDD1DA;
+        border-radius: 50%;
+        background: #FFF;
+      }
+      .radio__text:after {
+        content: '';
+        position: absolute;
+        top: 1px;
+        left: 4px;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background: #CC4E5C;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+        opacity: 0;
+        transition: .2s;
+      }
+      .radio input:checked + .radio__text:after {
+        opacity: 1;
+      }
+      .radio input:focus + .radio__text:before {
+        box-shadow: 0 0 0 3px rgba(204,78,92,.4);
+      }
+
+
+      .myforms {
+    	 width: 100%;
+    	 margin:100%;
+    }
+
+    .myforms input {
+    	 width: 100%;
+    	 border: 1px solid #ccc;
+    	 color: #504D4D;
+    	 padding: 3px 7px;
+    	 font-size: 90%;
+    	 letter-spacing: 0.5px;
+    }
+
+    .myforms input:focus {
+    	 border: 1px solid #504D4D;
+    }
+
+
+}
+@media screen and (min-width: 601px) {
+
+div.register input{border-color: #e6e6e6}
+
+  div.register {width: 100% }
+div.register table{width: 100%;border-spacing: 10px}
+div.check {width: 100%;height: 100%};
+div.check table{width: 100%}
+
+  body{background:#FFF; margin: 0;padding: 0;
+  font: 16px/24px Arial, sans-serif;}
+  a{text-decoration: none;}
+
+
+  /*структура*/
+  div.mid{width: 100%; margin: 0 auto;}
+  div.midS{width: 100%;margin: 0 auto;background-color: white;}
+  div.header{background: #2D2D2D;width: 100%}
+  div.header img{width: 25%}  /*шапка*/
 
 
   div.topmenu {float: right;color: black;width: 30%}
