--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -38,12 +38,20 @@ div.DoneForm a:hover {
 background:#D0D0D0;
 }
 
+div.searcher {line-height: 25px;color: black}
+div.searcher a{display: inline-block;
+  color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+ border-color:#2D2D2D;}
+div.searcher a:hover {
+background:#D0D0D0;
+}
+
 
 
 div.searcher {height: 100px}
 div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-div.searcher input {width: 100%;margin: 0;padding:0;border:8;border-color: black ; height: 40px}
-div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
+div.searcher input {margin: 0;padding:0;border:1;border-color: black ; height: 40px}
+div.hyb input{height: 36px;width: 100%;margin-bottom: 10px}
 
 
 div.main table{width: 100%}
@@ -56,7 +64,7 @@ div.profile td{text-align: center;}
 
 
 
-div.register {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
+div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
     inset 0 2px 5px #FFF,
     inset 1px 0 5px #FFF,
     inset -1px 0 5px #FFF,
@@ -128,7 +136,7 @@ div.register {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-s
 }
 
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
 
 div.register input{border-color: #e6e6e6}
   div.register tr {
@@ -177,11 +185,18 @@ margin: 10%
   background:#D0D0D0;
   }
 
+  div.searcher a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 85%;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.searcher a:hover {
+  background:#D0D0D0;
+  }
+
 
 
   div.searcher {height: 100px}
   div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-  div.searcher input {width: 100%;margin: 0;padding:0;border:8;border-color: black ; height: 40px}
+  div.searcher input {margin: 0;padding:0;border:8;border-color: black ; height: 40px}
   div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
 
 
@@ -193,7 +208,9 @@ margin: 10%
   div.profile th{color:black;background-color: white;border-color:white;width: 100%}
   div.profile td{text-align: center;}
 
-
+      .oo input{
+        display: none;
+      }
 
 
       .radio input {
@@ -257,7 +274,7 @@ margin: 10%
 
 
 }
-@media screen and (min-width: 601px) {
+@media only screen and (min-width: 551px) and (max-width:800px) and (orientation: landscape){
 
 div.register input{border-color: #e6e6e6}
 
@@ -286,9 +303,7 @@ margin: 10%
   div.topmenu a:hover {
   background:#cc4e5c;
   }
-  div.topmenu a:hover {
-  background:#cc4e5c;
-  }
+
   div.DoneForm {line-height: 30px}
 
 
@@ -303,10 +318,15 @@ margin: 10%
 
   div.searcher {height: 100px}
   div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-  div.searcher input {width: 100%;margin: 0;padding:0;border:8;border-color: black ; height: 40px}
+  div.searcher input {margin: 0;padding:0;border:8;border-color: black ; height: 40px}
   div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
 
-
+  div.searcher a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 85%;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.searcher a:hover {
+  background:#D0D0D0;
+  }
   div.main table{width: 100%}
 
 
