--- a/BetaBeginner/style.css
+++ b/BetaBeginner/style.css
@@ -1,5 +1,5 @@
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 1101px) {
 
 body{background:#FFF; margin: 0;padding: 0;
 font: 16px/24px Arial, sans-serif;}
@@ -7,8 +7,8 @@ a{text-decoration: none;}
 
 
 /*структура*/
-div.mid{width: 1200px; margin: 0 auto;}
-div.midS{width: 950px;margin: 0 auto;background-color: white;box-shadow:
+div.mid{width: 100%; margin: 0 auto;}
+div.midS{width: 80%;margin: 0 auto;background-color: white;box-shadow:
     inset 0 2px 5px #FFF,
     inset 1px 0 5px #FFF,
     inset -1px 0 5px #FFF,
@@ -16,18 +16,21 @@ div.midS{width: 950px;margin: 0 auto;background-color: white;box-shadow:
     0 0 40px rgba(0,0,0,0.24);
   ;}
 div.header{background: #2D2D2D;width: 100%}
+div.header img{width: 170px}
+
 /*шапка*/
 
 
 div.topmenu {float: right;line-height: 30px;color: black}
 div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
-  border-radius: 30px;background-color: #FFF;width: 130px;height: 30px;text-align: center; position: relative;
+  border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
 margin: 13px;
 
 }
 div.topmenu a:hover {
-background:#cc4e5c;
+background:#FFF;
 }
+
 div.DoneForm {line-height: 30px}
 
 
@@ -50,8 +53,8 @@ background:#D0D0D0;
 
 div.searcher {height: 100px}
 div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-div.searcher input {margin: 0;padding:0;border:1;border-color: black ; height: 40px}
-div.hyb input{height: 36px;width: 100%;margin-bottom: 10px}
+div.searcher input {outline: none;margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px}
+div.hyb input{width: 95%;height: 30px}
 
 
 div.main table{width: 100%}
@@ -64,13 +67,23 @@ div.profile td{text-align: center;}
 
 
 
-div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-shadow:
+div.window {width: 700px; height: 350px;margin: 0 auto;margin-top: 100px;box-shadow:
     inset 0 2px 5px #FFF,
     inset 1px 0 5px #FFF,
     inset -1px 0 5px #FFF,
     inset 0 -2px 5px #FFF,
     0 0 40px rgba(0,0,0,0.24);
   ;}
+  div.window input{width: 60%;height: 30px;}
+
+  div.windowlog {width: 500px; height: 300px;margin: 0 auto;margin-top: 100px;box-shadow:
+      inset 0 2px 5px #FFF,
+      inset 1px 0 5px #FFF,
+      inset -1px 0 5px #FFF,
+      inset 0 -2px 5px #FFF,
+      0 0 40px rgba(0,0,0,0.24);
+    ;}
+    div.windowlog input{height: 30px;width: 60%}
   div.register table{width: 90%; 	border-spacing: 15px;
 }
   div.register caption{font: 24px/36px Arial;margin-bottom: 30px;}
@@ -136,7 +149,164 @@ div.window {width: 700px ;margin: 0 auto;height: 350px;margin-top: 100px;box-sha
 }
 
 }
-@media screen and (max-width: 550px) {
+
+
+@media screen and (min-width: 801px) and (max-width:1100px) {
+
+body{background:#FFF; margin: 0;padding: 0;
+font: 16px/24px Arial, sans-serif;}
+a{text-decoration: none;}
+
+
+/*структура*/
+div.mid{width: 100%; margin: 0 auto;}
+div.midS{width: 90%;margin: 0 auto;background-color: white;box-shadow:
+    inset 0 2px 5px #FFF,
+    inset 1px 0 5px #FFF,
+    inset -1px 0 5px #FFF,
+    inset 0 -2px 5px #FFF,
+    0 0 40px rgba(0,0,0,0.24);
+  ;}
+div.header{background: #2D2D2D;width: 100%}
+div.header img{width: 170px}
+
+/*шапка*/
+
+
+div.topmenu {float: right;line-height: 30px;color: black}
+div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
+  border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+margin: 13px;
+
+}
+div.topmenu a:hover {
+background:#FFF;
+}
+
+
+
+div.DoneForm {line-height: 30px}
+
+
+div.DoneForm a{display: inline-block;
+  color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+margin: 13px; border-color:#2D2D2D; border: 2px;}
+div.DoneForm a:hover {
+background:#D0D0D0;
+}
+
+div.searcher {line-height: 25px;color: black}
+div.searcher a{display: inline-block;
+  color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+ border-color:#2D2D2D;}
+div.searcher a:hover {
+background:#D0D0D0;
+}
+
+
+
+div.searcher {height: 100px}
+div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
+div.searcher input {outline: none;margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px}
+div.hyb input{width: 95%;height: 30px}
+
+
+div.main table{width: 100%}
+
+
+div.profile table{width: 100%;text-align:center;border: 1px solid black;}
+div.profile button{color:black;background-color: white;border-color: black;width: 50%}
+div.profile th{color:black;background-color: white;border-color:white;width: 100%}
+div.profile td{text-align: center;}
+
+
+
+div.window {width: 700px; height: 350px;margin: 0 auto;margin-top: 100px;box-shadow:
+    inset 0 2px 5px #FFF,
+    inset 1px 0 5px #FFF,
+    inset -1px 0 5px #FFF,
+    inset 0 -2px 5px #FFF,
+    0 0 40px rgba(0,0,0,0.24);
+  ;}
+
+  div.window input{width: 50%;height: 20px;}
+
+  div.windowlog {width: 400px; height: 250px;margin: 0 auto;margin-top: 100px;box-shadow:
+      inset 0 2px 5px #FFF,
+      inset 1px 0 5px #FFF,
+      inset -1px 0 5px #FFF,
+      inset 0 -2px 5px #FFF,
+      0 0 40px rgba(0,0,0,0.24);
+    ;}
+    div.windowlog input{height: 20px;width: 50%}
+
+
+  div.register table{width: 90%; 	border-spacing: 15px;
+}
+  div.register caption{font: 24px/36px Arial;margin-bottom: 30px;}
+
+
+  .radio input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+  }
+  .radio__text {
+    position: relative;
+    cursor: pointer;
+  }
+  .radio__text:before {
+    content: '';
+    position: absolute;
+    top: -3px;
+    left: 0;
+    width: 18px;
+    height: 18px;
+    border: 1px solid #CDD1DA;
+    border-radius: 50%;
+    background: #FFF;
+  }
+  .radio__text:after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 4px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #CC4E5C;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+    opacity: 0;
+    transition: .2s;
+  }
+  .radio input:checked + .radio__text:after {
+    opacity: 1;
+  }
+  .radio input:focus + .radio__text:before {
+    box-shadow: 0 0 0 3px rgba(204,78,92,.4);
+  }
+
+
+  .myforms {
+	 width: 150px;
+	 margin: 150px auto;
+}
+
+.myforms input {
+	 width: 100%;
+	 border: 1px solid #ccc;
+	 color: #504D4D;
+	 padding: 3px 7px;
+	 font-size: 90%;
+	 letter-spacing: 0.5px;
+}
+
+.myforms input:focus {
+	 border: 1px solid #504D4D;
+}
+
+}
+@media screen and (min-width: 351px) and (max-width: 550px) {
 
 div.register input{border-color: #e6e6e6}
   div.register tr {
@@ -150,7 +320,7 @@ div.register input{border-color: #e6e6e6}
   div.register {width: 100% }
 
 div.check {width: 100%;height: 100%};
-div.check table{width: 100%}
+div.check table{width: 90%}
 
   body{background:#FFF; margin: 0;padding: 0;
   font: 16px/24px Arial, sans-serif;}
@@ -161,20 +331,21 @@ div.check table{width: 100%}
   div.mid{width: 100%; margin: 0 auto;}
   div.midS{width: 100%;margin: 0 auto;background-color: white;}
   div.header{background: #2D2D2D;width: 100%}
-  div.header img{width: 35%}  /*шапка*/
+  div.header img{width: 30%;margin-left: 35%}  /*шапка*/
 
 
-  div.topmenu {float: right;color: black;width: 30%}
+  div.topmenu {color: #2D2D2D;align:center}
+  div.topmenu table{width: 100%}
+  div.topmenu td{width: 50%}
   div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
-    border-radius: 30px;background-color: #FFF;width: 60%;text-align: center; position: relative;
-margin: 10%
+    border-radius: 30px;background-color: #cc4e5c;width: 80%;text-align: center; margin-left: 10%;margin-top: 10%;
+margin-bottom: 10%
   }
   div.topmenu a:hover {
-  background:#cc4e5c;
+  background:#FFF;
   }
-  div.topmenu a:hover {
-  background:#cc4e5c;
-  }
+
+
   div.DoneForm {line-height: 30px}
 
 
@@ -185,19 +356,14 @@ margin: 10%
   background:#D0D0D0;
   }
 
-  div.searcher a{display: inline-block;
-    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 85%;text-align: center; position: relative;
-  margin: 13px; border-color:#2D2D2D; border: 2px;}
-  div.searcher a:hover {
-  background:#D0D0D0;
-  }
+
 
 
 
   div.searcher {height: 100px}
-  div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-  div.searcher input {margin: 0;padding:0;border:8;border-color: black ; height: 40px}
-  div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
+  div.searcher table{width: 100%;text-align: center;height: 100%}
+  div.searcher input {margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px}
+  div.hyb input{width: 95%;height: 30px}
 
 
   div.main table{width: 100%}
@@ -274,6 +440,155 @@ margin: 10%
 
 
 }
+
+@media screen and (max-width: 350px) {
+
+div.register input{border-color: #e6e6e6}
+  div.register tr {
+    display: block;
+
+  }
+  div.register td {
+    margin-bottom: 10%;
+    display: block;
+  }
+  div.register {width: 100% }
+
+div.RadioTab tr{
+  display: block;
+}
+div.RadioTab td{
+  margin-bottom: 4.5px;
+  display: block;}
+  div.header table tr {
+    display: block;
+
+  }
+  div.header table td {
+    margin-bottom: 4.5px;
+    display: block;
+  }
+
+
+  body{background:#FFF; margin: 0;padding: 0;
+  font: 16px/24px Arial, sans-serif;}
+  a{text-decoration: none;}
+
+
+  /*структура*/
+  div.mid{width: 100%; margin: 0 auto;}
+  div.midS{width: 100%;margin: 0 auto;background-color: white;}
+  div.header{background: #2D2D2D;width: 100%}
+  div.header img{width: 36%;margin-left: 32%}  /*шапка*/
+
+
+  div.topmenu {color: #2D2D2D;align:center}
+  div.topmenu table{width: 100%}
+  div.topmenu td{width: 50%}
+  div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
+    border-radius: 30px;background-color: #cc4e5c;width: 100%;text-align: center; margin-left: 50%;margin-top: 10%;
+margin-bottom: 10%
+  }
+  div.topmenu a:hover {
+  background:#FFF;
+  }
+
+  div.DoneForm {line-height: 30px}
+
+
+  div.DoneForm a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.DoneForm a:hover {
+  background:#D0D0D0;
+  }
+
+
+
+
+
+  div.searcher {height: 100px}
+  div.searcher table{width: 100%;text-align: center;height: 100%}
+  div.searcher input {margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px}
+  div.hyb input{width: 100%;height: 30px}
+
+
+  div.main table{width: 100%}
+
+
+  div.profile table{width: 100%;text-align:center;border: 1px solid black;}
+  div.profile button{color:black;background-color: white;border-color: black;width: 50%}
+  div.profile th{color:black;background-color: white;border-color:white;width: 100%}
+  div.profile td{text-align: center;}
+
+      .oo input{
+        display: none;
+      }
+
+
+      .radio input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+      }
+      .radio__text {
+        position: relative;
+        cursor: pointer;
+      }
+      .radio__text:before {
+        content: '';
+        position: absolute;
+        top: -3px;
+        left: 0;
+        width: 18px;
+        height: 18px;
+        border: 1px solid #CDD1DA;
+        border-radius: 50%;
+        background: #FFF;
+      }
+      .radio__text:after {
+        content: '';
+        position: absolute;
+        top: 1px;
+        left: 4px;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background: #CC4E5C;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+        opacity: 0;
+        transition: .2s;
+      }
+      .radio input:checked + .radio__text:after {
+        opacity: 1;
+      }
+      .radio input:focus + .radio__text:before {
+        box-shadow: 0 0 0 3px rgba(204,78,92,.4);
+      }
+
+
+      .myforms {
+    	 width: 100%;
+    	 margin:100%;
+    }
+
+    .myforms input {
+    	 width: 100%;
+    	 border: 1px solid #ccc;
+    	 color: #504D4D;
+    	 padding: 3px 7px;
+    	 font-size: 90%;
+    	 letter-spacing: 0.5px;
+    }
+
+    .myforms input:focus {
+    	 border: 1px solid #504D4D;
+    }
+
+
+}
+
+
 @media only screen and (min-width: 551px) and (max-width:800px) and (orientation: landscape){
 
 div.register input{border-color: #e6e6e6}
@@ -292,17 +607,20 @@ div.check table{width: 100%}
   div.mid{width: 100%; margin: 0 auto;}
   div.midS{width: 100%;margin: 0 auto;background-color: white;}
   div.header{background: #2D2D2D;width: 100%}
-  div.header img{width: 25%}  /*шапка*/
+  div.header img{width: 20%;margin-left: 40%}  /*шапка*/
 
 
-  div.topmenu {float: right;color: black;width: 30%}
+  div.topmenu {color: #2D2D2D;align:center}
+  div.topmenu table{width: 100%}
+  div.topmenu td{width: 50%}
   div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
-    border-radius: 30px;background-color: #FFF;width: 60%;text-align: center; position: relative;
-margin: 10%
+    border-radius: 30px;background-color: #cc4e5c;width: 60%;text-align: center; margin-left: 20%;margin-top: 4%;
+margin-bottom: 4%
   }
   div.topmenu a:hover {
-  background:#cc4e5c;
+  background:#FFF;
   }
+
 
   div.DoneForm {line-height: 30px}
 
@@ -318,8 +636,139 @@ margin: 10%
 
   div.searcher {height: 100px}
   div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
-  div.searcher input {margin: 0;padding:0;border:8;border-color: black ; height: 40px}
-  div.hyb input{height: 36px;width: 100%;margin-bottom: 6.5px}
+  div.searcher input {outline: none;margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px;}
+
+  div.hyb input,textarea{width: 95%;height: 30px;outline: none;}
+
+
+  div.searcher a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 85%;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.searcher a:hover {
+  background:#D0D0D0;
+  }
+  div.main table{width: 100%}
+
+
+  div.profile table{width: 100%;text-align:center;border: 1px solid black;}
+  div.profile button{color:black;background-color: white;border-color: black;width: 50%}
+  div.profile th{color:black;background-color: white;border-color:white;width: 100%}
+  div.profile td{text-align: center;}
+
+
+
+
+      .radio input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+      }
+      .radio__text {
+        position: relative;
+        cursor: pointer;
+      }
+      .radio__text:before {
+        content: '';
+        position: absolute;
+        top: -3px;
+        left: 0;
+        width: 18px;
+        height: 18px;
+        border: 1px solid #CDD1DA;
+        border-radius: 50%;
+        background: #FFF;
+      }
+      .radio__text:after {
+        content: '';
+        position: absolute;
+        top: 1px;
+        left: 4px;
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        background: #CC4E5C;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+        opacity: 0;
+        transition: .2s;
+      }
+      .radio input:checked + .radio__text:after {
+        opacity: 1;
+      }
+      .radio input:focus + .radio__text:before {
+        box-shadow: 0 0 0 3px rgba(204,78,92,.4);
+      }
+
+
+      .myforms {
+    	 width: 100%;
+    	 margin:100%;
+    }
+
+    .myforms input {
+    	 width: 100%;
+    	 border: 1px solid #ccc;
+    	 color: #504D4D;
+    	 padding: 3px 7px;
+    	 font-size: 90%;
+    	 letter-spacing: 0.5px;
+    }
+
+    .myforms input:focus {
+    	 border: 1px solid #504D4D;
+    }
+
+
+}@media only screen and (min-width: 551px) and (max-width:800px){
+
+div.register input{border-color: #e6e6e6}
+
+  div.register {width: 100% }
+div.register table{width: 100%;border-spacing: 10px}
+div.check {width: 100%;height: 100%};
+div.check table{width: 100%}
+
+  body{background:#FFF; margin: 0;padding: 0;
+  font: 16px/24px Arial, sans-serif;}
+  a{text-decoration: none;}
+
+
+  /*структура*/
+  div.mid{width: 100%; margin: 0 auto;}
+  div.midS{width: 100%;margin: 0 auto;background-color: white;}
+  div.header{background: #2D2D2D;width: 100%}
+  div.header img{width: 30%;margin-left: 35%}  /*шапка*/
+
+
+  div.topmenu {color: #2D2D2D;align:center}
+  div.topmenu table{width: 100%}
+  div.topmenu td{width: 50%}
+  div.topmenu a{display: inline-block;box-sizing: border-box;color: #2D2D2D;
+    border-radius: 30px;background-color: #cc4e5c;width: 60%;text-align: center; margin-left: 20%;margin-top: 4%;
+margin-bottom: 4%
+  }
+  div.topmenu a:hover {
+  background:#FFF;
+  }
+
+
+  div.DoneForm {line-height: 30px}
+
+
+  div.DoneForm a{display: inline-block;
+    color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 130px;height: 30px;text-align: center; position: relative;
+  margin: 13px; border-color:#2D2D2D; border: 2px;}
+  div.DoneForm a:hover {
+  background:#D0D0D0;
+  }
+
+
+
+  div.searcher {height: 100px}
+  div.searcher table{width: 100%;border-collapse:collapse;text-align: center;height: 100%}
+  div.searcher input {outline: none;margin: 0;padding:0;border:1;border-color: #2D2D2D ; height: 40px;}
+
+  div.hyb input,textarea{width: 95%;height: 30px;outline: none;}
+
 
   div.searcher a{display: inline-block;
     color: #2D2D2D;border-radius: 30px;background-color: #cc4e5c;width: 85%;text-align: center; position: relative;
